@@ -5,10 +5,9 @@ WORKDIR /tmp/
 RUN sed -i 's#<url-pattern>/\*</url-pattern>#<url-pattern>${URLPATTERN}</url-pattern>#' src/main/webapp/WEB-INF/web.xml && \
   mvn package
 
-FROM tomcat:9-jre11
+FROM jetty:10-jdk11
 MAINTAINER Michael Büchner <m.buechner@dnb.de>
-COPY --from=MAVEN_CHAIN /tmp/target/dzp-fcs.war ${CATALINA_HOME}/webapps/ROOT.war
-COPY --from=MAVEN_CHAIN /tmp/setenv.sh ${CATALINA_HOME}/bin/
-COPY --from=MAVEN_CHAIN /tmp/logging.properties ${CATALINA_HOME}/conf/
+# RUN java -jar $JETTY_HOME/start.jar --add-modules=plus
+COPY --from=MAVEN_CHAIN /tmp/target/dzp-fcs.war /var/lib/jetty/webapps/ROOT.war
 
 EXPOSE 8080
